k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-with-devops
spec:
  selector:
    app: go-app-with-devops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
